# azure-project-template

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  add-implementations.ps1  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-platform.yml  deploy.yml  template-setup.yml
docs/: TEAMS_SETUP.md
infra/: main.bicep
infra/modules/: app-insights.bicep  redis.bicep  storage.bicep
infra/parameters/: dev.bicepparam
platform/github-app/: .env.example  .gitignore  Dockerfile  README.md  package.json  vercel.json
platform/github-app/src/: index.ts
platform/web-portal/: .env.example  .gitignore  README.md  package.json  tailwind.config.js
platform/web-portal/src/app/: layout.tsx  page.tsx
platform/web-portal/src/app/api/create-project/: route.ts
platform/web-portal/src/app/api/list-projects/: route.ts
platform/web-portal/src/components/: ProjectForm.tsx  ProjectList.tsx
src/api-hexagonal/domain/repositories/: user_repository.py
templates/dotnet/: .env.example  Program.cs  appsettings.json
templates/fastapi/: .env.example  main.py  pyproject.toml  requirements.txt
templates/fastapi/tests/: __init__.py  conftest.py  test_health.py  test_root.py
templates/go/: .env.example  main.go  main_test.go
templates/nodejs/: .env.example  .eslintrc.json  index.js  package.json
templates/nodejs/tests/: health.test.js  root.test.js
